# refferal_system_hs

./: .flake8  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
api_hummersystems/: settings.py  urls.py  yasg.py
api_hummersystems/api_hummersystems/: asgi.py  settings.py  urls.py  wsgi.py
refferral_system/: apps.py  models.py  serializers.py  urls.py  utils.py  views.py
refferral_system/migrations/: 0001_initial.py  0002_alter_referral_reffered_by.py
tests/refferral_system/: conftest.py  test_user.py
