[tool.poetry]
name = "test-api"
version = "0.1.0"
description = ""
authors = ["Starostin German"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.10"
djangorestframework = "^3.15.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
djangorestframework-simplejwt = "^5.3.1"
pytest = "^8.1.1"
pytest-django = "^4.8.0"
drf-yasg = "^1.21.7"
dj-database-url = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
